- Login now uses javascript to check password length and matching - Fixed modal not showing on home - Registering now requires you to login after - Added modal after registering - Fixed being able to access register page after failed first step

--- a/home/home.css
+++ b/home/home.css
@@ -10,7 +10,7 @@ body {
 /* Header Code */
 
 #header-secondary {
-    padding-top: 3.5rem !important;
+    padding-top: 3.75rem !important;
     background-color: #4A86E8;
     height: initial !important;
 }
